--- a/car.css
+++ b/car.css
@@ -36,4 +36,14 @@ font-style: normal;
 font-weight: 700;
 line-height: 134.6%; /* 86.144px */
   }
+.k{
+width: 1409px;
+height:100% ;
+background-color: yellow;
+}
+.rr{
+height: 50px;
+width: 356px;
+background-color: antiquewhite;
 
+}
